--- a/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
@@ -8,14 +8,35 @@
 
 @section section1
 {
-    <link href="../../Content/css/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/jquery-ui.css" rel="stylesheet" type="text/css" /> 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=8" />
     <link href="../../Content/css/mosaic.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/css/searchBox.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-    <script src="../../Content/jQuery/mosaic.1.0.1.js" type="text/javascript"></script>
+    
+    <!--autocomplete-->
+    <link href="../../Content/css/Autocomplete/jquery-ui-1.8.24.custom.css" rel="stylesheet" type="text/css" />  
+    <script src="../../Content/jQuery/Autocomplete/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script src="../../Content/jQuery/Autocomplete/jquery-ui-1.8.24.custom.min.js" type="text/javascript"></script> 
+
+    <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
+    <script src="../../Content/jQuery/mosaic.1.0.1.js" type="text/javascript"></script> -->
+    
     <script type="text/javascript">
+
+        $(document).ready(function () {
+            $("#search").autocomplete({
+                source: "/Home/AutocompleteSuggestions",
+                minLength: 1,
+                select: function (event, ui) {
+                    if (ui.item) {
+                        $("#search").val(ui.item.value);
+                    
+                    }
+                }
+            });
+            
+        });
 
         jQuery(function ($) {
 
@@ -57,41 +78,29 @@
 
         });
 
-        
-
-
         function check(id,idImage) {
-           /* alert(document.getElementById(id).checked);*/
+            /* alert(document.getElementById(id).checked);*/
             if (document.getElementById(id).checked == true) {
                 $('#' + idImage).addClass("img_nonselected");
                 document.getElementById(id).attr('checked', false);
             } else {
                 $('#' + idImage).removeClass("img_nonselected");
                 document.getElementById(id).attr('checked', true);
-               
             }
         }
 
         function checkImage(idImage) {
-
             if (document.getElementById(idImage).hasClass("img_nonselected")) {
                 $('#' + idImage).removeClass("img_nonselected");
-                
+
             } else {
                 $('#' + idImage).addClass("img_nonselected");
             }
         }
 
-        var boxes = $(":checkbox:checked");
-        $("#chk1").change(function () {
-            alert("chk1 Changed");
-        });
-       
-
     </script>
-
+    
 }
-
 
 <div id="content">
     <div class="container">
@@ -101,7 +110,7 @@
                  @using (Html.BeginForm("Search", "Home", FormMethod.Get))
                  {
                       <div class="searchbox">
-                        @Html.TextBox("search", ViewBag.townFilter as string, new { @placeholder = "Medellín" })
+                        @Html.TextBox("search", ViewBag.townFilter as string, new { @placeholder = "selecciona tu ciudad de destino y servicios" })
                          <button class="btnSearch" name="submit" type="submit">Buscar</button>
                        </div>
                  
