--- a/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
@@ -10,6 +10,14 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+   <link href="../../Content/css/cssTheme/reset.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/layout.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/skeleton.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/prettyPhoto.css" rel="stylesheet" type="text/css" />
+
+
+
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/jquery.mobile.customized.min.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/jquery.easing.1.3.js" type="text/javascript"></script>
@@ -20,15 +28,9 @@
     <script src="../../Content/jQuery/jsTheme/excanvas.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/jquery.prettyPhoto.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/script.js" type="text/javascript"></script>
-
+   
     
-    <link href="../../Content/css/cssTheme/reset.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/style.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/layout.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/skeleton.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/prettyPhoto.css" rel="stylesheet" type="text/css" />
-
-
+ 
     
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -83,7 +85,7 @@
                     <div class="clearfix">
                     	<h1 id="site-title">
                         	<a href="@Url.Action("Search", "Home")">Danico</a>
-                            <span>frase</span>
+                            <span>mejora tu estadía</span>
                         </h1>
                         <nav class="header">
                             <ul>
