--- a/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
@@ -6,6 +6,8 @@
 }
 @{var checkList = ((string[])ViewBag.checkList);}  <!-- idea taken from http://stackoverflow.com/questions/10496353/how-to-get-checkbox-values-back-to-view/10521131#10521131-->
 
+  
+}
 @section section1
 {
     <link href="../../Content/css/jquery-ui.css" rel="stylesheet" type="text/css" /> 
@@ -25,17 +27,34 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
+            $("#CustByName").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: "/Home/AutocompleteSuggestions", type: "GET", dataType: "json",
+                        data: { searchText: request.term },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                return {
+                                    label: item.name,
+                                    value: item.name,
+                                    id: item.pk_idTown
+                                }
+                            })); // <--- semicolon here
+                        }
+                    }); // <--- semicolon here
+                },
+                minLength: 1 // <-- sets the minimum number of characters to type before ajax fires
+            });
+
             $("#search").autocomplete({
-                source: "/Home/AutocompleteSuggestions",
+                source: "/Home/AutocompleteAsync",
                 minLength: 1,
                 select: function (event, ui) {
                     if (ui.item) {
                         $("#search").val(ui.item.value);
-                    
                     }
                 }
             });
-            
         });
 
         jQuery(function ($) {
@@ -102,6 +121,8 @@
     
 }
 
+<!--@Html.TextBox("CustByName", ViewBag.townFilter as string, new { @placeholder = "selecciona tu ciudad de destino y servicios" ,@class = "ui-widget",  }) -->
+
 <div id="content">
     <div class="container">
         <div class="sixteen columns page-title">
@@ -111,6 +132,8 @@
                  {
                       <div class="searchbox">
                         @Html.TextBox("search", ViewBag.townFilter as string, new { @placeholder = "selecciona tu ciudad de destino y servicios" })
+                        @Html.HiddenFor(m => m.FirstOrDefault().fk_idTown)
+
                          <button class="btnSearch" name="submit" type="submit">Buscar</button>
                        </div>
                  
