--- a/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
@@ -6,8 +6,6 @@
 }
 @{var checkList = ((string[])ViewBag.checkList);}  <!-- idea taken from http://stackoverflow.com/questions/10496353/how-to-get-checkbox-values-back-to-view/10521131#10521131-->
 
-  
-}
 @section section1
 {
     <link href="../../Content/css/jquery-ui.css" rel="stylesheet" type="text/css" /> 
@@ -21,8 +19,8 @@
     <script src="../../Content/jQuery/Autocomplete/jquery-1.8.2.min.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/Autocomplete/jquery-ui-1.8.24.custom.min.js" type="text/javascript"></script> 
 
-    <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-    <script src="../../Content/jQuery/mosaic.1.0.1.js" type="text/javascript"></script> -->
+    <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>-->
+    <script src="../../Content/jQuery/mosaic.1.0.1.js" type="text/javascript"></script> 
     
     <script type="text/javascript">
 
@@ -145,11 +143,15 @@
                            <!--    @Html.CheckBox("reglist", new { id = "prueba2", value = "1" })  --> 
                                     @if (checkList != null && checkList.Contains("1"))
                                     {
-                                       <input type="checkbox" value="1" name="orderNumbers" id="chk1"  onchange="javascript:checkImage('imge1');" checked />
+                                       <input type="checkbox" value="1" name="orderNumbers" id="chk1"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge1').removeClass("img_nonselected");
+                                        </script>
+
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="1" name="orderNumbers" id="chk1" onchange="javascript:checkImage('imge1');" />
+                                      <input type="checkbox" value="1" name="orderNumbers"  style="display:none" id="chk1" />
                                     }
                         </div>
                     </div>
@@ -158,11 +160,14 @@
                             <label for="chk2"><img src="../../Content/images/danico/parqueo.png" class="img_nonselected" id="imge2" onclick="javascript:check('chk2','imge2');" alt="" /></label>
                                     @if (checkList != null && checkList.Contains("2"))
                                     {
-                                       <input type="checkbox" value="2" name="orderNumbers" id="chk2"   checked />
+                                       <input type="checkbox" value="2" name="orderNumbers" style="display:none" id="chk2"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge2').removeClass("img_nonselected");
+                                        </script>
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="2" name="orderNumbers" id="chk2" />
+                                      <input type="checkbox" value="2" name="orderNumbers"  style="display:none" id="chk2" />
                                     }
                          </div>
                     </div>
@@ -171,11 +176,14 @@
                             <label for="chk3"><img src="../../Content/images/danico/bano.png" class="img_nonselected" id="imge3" onclick="javascript:check('chk3','imge3');" alt="" /></label>
                                     @if (checkList != null && checkList.Contains("3"))
                                     {
-                                       <input type="checkbox" value="3" name="orderNumbers" id="chk3"   checked />
+                                       <input type="checkbox" value="3" name="orderNumbers"  style="display:none" id="chk3"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge3').removeClass("img_nonselected");
+                                        </script>
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="3" name="orderNumbers" id="chk3" />
+                                      <input type="checkbox" value="3" name="orderNumbers"  style="display:none" id="chk3" />
                                     }
                          </div>
                     </div>
@@ -184,11 +192,14 @@
                             <label for="chk4"><img src="../../Content/images/danico/internet.png" class="img_nonselected" id="imge4" onclick="javascript:check('chk4','imge4');" alt="" /></label>
                                     @if (checkList != null && checkList.Contains("4"))
                                     {
-                                       <input type="checkbox" value="4" name="orderNumbers" id="chk4"   checked />
+                                       <input type="checkbox" value="4" name="orderNumbers"  style="display:none" id="chk4"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge4').removeClass("img_nonselected");
+                                        </script>
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="4" name="orderNumbers" id="chk4" />
+                                      <input type="checkbox" value="4" name="orderNumbers"  style="display:none" id="chk4" />
                                     }
                          </div>
                     </div>
@@ -197,11 +208,14 @@
                             <label for="chk5"><img src="../../Content/images/danico/caja.png" class="img_nonselected" id="imge5" onclick="javascript:check('chk5','imge5');" alt="" /></label>
                                     @if (checkList != null && checkList.Contains("5"))
                                     {
-                                       <input type="checkbox" value="5" name="orderNumbers" id="chk5"   checked />
+                                       <input type="checkbox" value="5" name="orderNumbers"  style="display:none" id="chk5"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge5').removeClass("img_nonselected");
+                                        </script>
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="5" name="orderNumbers" id="chk5" />
+                                      <input type="checkbox" value="5" name="orderNumbers"  style="display:none" id="chk5" />
                                     }
                          </div>
                     </div>
@@ -210,11 +224,14 @@
                             <label for="chk6"><img src="../../Content/images/danico/lavanderia.png" class="img_nonselected" id="imge6" onclick="javascript:check('chk6','imge6');" alt="" /></label>
                                     @if (checkList != null && checkList.Contains("6"))
                                     {
-                                       <input type="checkbox" value="6" name="orderNumbers" id="chk6"   checked />
+                                       <input type="checkbox" value="6" name="orderNumbers"  style="display:none" id="chk6"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge6').removeClass("img_nonselected");
+                                        </script>
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="6" name="orderNumbers" id="chk6" />
+                                      <input type="checkbox" value="6" name="orderNumbers"  style="display:none" id="chk6" />
                                     }
                          </div>
                     </div>
@@ -223,11 +240,14 @@
                             <label for="chk7"><img src="../../Content/images/danico/tarjetas.png" class="img_nonselected" id="imge7" onclick="javascript:check('chk7','imge7');" alt="" /></label>
                                     @if (checkList != null && checkList.Contains("7"))
                                     {
-                                       <input type="checkbox" value="7" name="orderNumbers" id="chk7"   checked />
+                                       <input type="checkbox" value="7" name="orderNumbers"  style="display:none" id="chk7"   checked />
+                                        <script type="text/javascript">
+                                            $('#imge7').removeClass("img_nonselected");
+                                        </script>
                                     }
                                     else
                                     {
-                                      <input type="checkbox" value="7" name="orderNumbers" id="chk7" />
+                                      <input type="checkbox" value="7" name="orderNumbers"  style="display:none" id="chk7" />
                                     }
                          </div>
                     </div>
@@ -247,7 +267,7 @@
                 <!--Fade-->
                 <div class="mosaic-block fade">
                     
-                    <a href="@Url.Action("Details", "Hotel", new { id= item.pk_idHotel })" class="mosaic-overlay"> 
+                    <a href="@Url.Action("Details", "Hotel", new { id = item.pk_idHotel })" class="mosaic-overlay"> 
                         <div class="details">
                             <h4>@Html.DisplayFor(modelItem => item.name)</h4>
                             <p>@Html.DisplayFor(modelItem => item.description)
