--- a/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Home/Search.cshtml
@@ -143,7 +143,7 @@
                            <!--    @Html.CheckBox("reglist", new { id = "prueba2", value = "1" })  --> 
                                     @if (checkList != null && checkList.Contains("1"))
                                     {
-                                       <input type="checkbox" value="1" name="orderNumbers" id="chk1"   checked />
+                                       <input type="checkbox" value="1" name="orderNumbers" id="chk1"  style="display:none" checked />
                                         <script type="text/javascript">
                                             $('#imge1').removeClass("img_nonselected");
                                         </script>
