--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -117,6 +117,10 @@
                 <h4>Rango de Precios por noche: @vbprice </h4>
                 <h4>Rango de Capacidad por Habitación: @vbcapacity</h4>
                 
+                <div class="danicoTwitter "> 
+                    <a href="https://twitter.com/dmarinmu" class="twitter-follow-button " data-show-count="false" >Follow  @Model.FirstOrDefault().HtwitterId</a> 
+                </div>
+                <script>    !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } } (document, "script", "twitter-wjs");</script>
         </div>
         </div>
 
